2005-10-21  Stephen J. Turnbull  <stephen@xemacs.org>

	* build-report.el: Note synch to XEmacs build package version 1.49.

2005-10-04  Stephen J. Turnbull  <stephen@xemacs.org> 

	* build-report.el (build-report): Refactor into interactive
	portion and `build-report-create-report'.
	(build-report-create-report): New function.
	(batch-build-report): Non-interactive version of `build-report'
	using `build-report-create-report'.

2005-10-10  Malcolm Purvis  <malcolmp@xemacs.org>

	* minibuf.el:
	* minibuf.el (read-buffer): Follow GNU Emacs behaviour: Can return
	empty string if require-match is t and default is nil.
	* replace.el: Moved occur code to occur.el
	* simple.el:
	* simple.el (line-number-at-pos): New.
	* subr.el:
	* subr.el (delete-dups): New.
	* occur.el: New.  Sync with 22.0.50.1 (CVS)
	* next-error.el: New.  Sync with 22.0.50.1 (CVS)

2005-10-10  Steve Youngs  <steve@sxemacs.org>

	* help.el (view-emacs-news): Use `expand-file-name' instead of
	`locate-data-file' as the latter will find any "NEWS" files that
	might exist in packages _before_ the one in core.

2005-10-09  Adrian Aichner  <adrian@xemacs.org>

	* finder.el (finder-find-library): Return filename actually
	searched for.

2005-10-04  Stephen J. Turnbull  <stephen@xemacs.org>

	* simple.el (xemacs-default-composefunc): Don't warn when batch.

2005-10-04  Stephen J. Turnbull  <stephen@xemacs.org> 

	* build-report.el: Synch to Adrian's packaged version.

2005-10-04  Stephen J. Turnbull  <stephen@xemacs.org>

	* mule/canna-leim.el: Rename canna_api to canna-api.

2005-09-30  Stephen J. Turnbull  <stephen@xemacs.org>

	* mule/canna-leim.el (canna-activate): Fix typo in error symbol.
	Improve docstring.

2005-09-22  Stephen J. Turnbull  <stephen@xemacs.org>

	* mule/canna-leim.el: Add comment on autoloading strategy.
	(canna-activate): Handle CANNA in ELL.

	* dumped-lisp.el (preloaded-file-list): Remove dependency of
	canna-leim on CANNA.  Canna may be an ELL.
